# privacy-preserving-data-systems

./: CHANGELOG.md  Central_DP_Diagram_Note.md  Control_Plane_Diagram.md  Granularity Selection Specification.md  LPS Scoring Specification.md  Local_DP_Diagram_Note.md  README.md  Runtime_Plane_Central_DP_Diagram.md  Runtime_Plane_Local_DP_Diagram.md  Runtime_Plane_Shuffle_DP.md  Shuffle_DP_Note.md  _config.yml  data_lineage_and_trust_boundary.md  design.md  evaluation_checklist.md  example_code.py  metrics_definitions.md  pyproject.toml  validation_protocol.md
.github/workflows/: ci.yml  diffusion_demo.yml  ppds_verification_pack.yml  verification_pack.yml
examples/: feature.json  policy_v1.json  policy_v2.json
examples/configs/: features_min.json  policy_min.json
examples/warehouse_jobs/: cron_example.md
policy/: dp_agg_default.yaml
sql/: 01_budget_ledger.sql  02_scorecards.sql
sql/dialects/: base.py  emitter.py  registry.py  spark.py
src/ppds/: budget.py  cli.py  config.py  errors.py  lps.py  plan_contract.py  planner.py  planner_binding.py  policy_gate.py  routing_engine.py  sql_emitter.py  types.py
src/ppds/lps/: __init__.py  core.py  scorer.py
tests/: test_budget.py  test_integration_demo.py  test_lps.py  test_plan_contract.py  test_planner.py  test_policy_thresholds_validation.py
